<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/wallet_menu"
        app:showAsAction="always"
        android:title="@string/wallet" />

    <item
        android:id="@+id/send_eth_menu"
        app:showAsAction="always"
        android:title="@string/send_ether" />


    <item
        android:id="@+id/contact_menu"
        app:showAsAction="always"
        android:title="@string/contact" />

    <item
        android:id="@+id/histo_menu"
        app:showAsAction="always"
        android:title="@string/contact" />


    <item
        android:id="@+id/login_menu"
        app:showAsAction="always"
        android:title="@string/login" />

    <item
        android:id="@+id/settings_menu"
        app:showAsAction="always"
        android:title="@string/settings" />

</menu>
