<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/wallet"
        android:textSize="32sp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/qr_code"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:contentDescription="@string/scan"/>


    <TextView
        android:textSize="15sp"
        android:text="@string/address"
        app:srcCompat="@drawable/ic_monetization_on_black_24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_address"

        android:textSize="15sp"
        app:srcCompat="@drawable/ic_account_box_black_24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="15sp"
        android:text="@string/balance"
        app:srcCompat="@drawable/ic_monetization_on_black_24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_wallet_value"
        android:textSize="12sp"
        app:srcCompat="@drawable/ic_monetization_on_black_24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>